fix: align general tabs underline

--- a/src/components/reusable/tabs/tabs.scss
+++ b/src/components/reusable/tabs/tabs.scss
@@ -33,8 +33,8 @@
     border-bottom: 1px solid var(--kd-color-border-accent-secondary);
     position: absolute;
     bottom: 0;
-    left: 0;
-    right: 0;
+    left: 2px;
+    right: -2px;
     z-index: -1;
   }
 
